--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -3,6 +3,7 @@
 :root {
   --background: #ffffff;
   --foreground: #fff8f8;
+
 }
 
 @theme inline {
@@ -22,5 +23,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-michroma);
 }
